# Slipkey

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml
bins/imeswitch-app/: Cargo.toml  tauri.conf.json
bins/imeswitch-app/src/: commands.rs  main.rs
bins/imeswitch-app/ui/: index.html  wizard.html
bins/imeswitchd/: Cargo.toml
bins/imeswitchd/src/: main.rs
bins/slipkey-app/: Info.plist  Package.swift
bins/slipkey-app/Resources/: icon.icns
bins/slipkey-app/Sources/SlipkeyApp/App/: AppDelegate.swift  AppState.swift  SlipkeyApp.swift  StatusItemManager.swift  WindowManager.swift
bins/slipkey-app/Sources/SlipkeyApp/Hook/: Composition.swift  EventHook.swift  HookKey.swift  IMEManager.swift  Keycode.swift  StateMachine.swift
bins/slipkey-app/Sources/SlipkeyApp/Models/: Models.swift
bins/slipkey-app/Sources/SlipkeyApp/Services/: AccessibilityService.swift  DiagnosticLogger.swift  HookService.swift  InputSourceService.swift  LoginItemService.swift
bins/slipkey-app/Sources/SlipkeyApp/Stores/: ConfigStore.swift  L10n.swift  SettingsStore.swift
bins/slipkey-app/Sources/SlipkeyApp/Views/: SettingsView.swift
bins/slipkey-app/Tests/SlipkeyAppTests/: AboutSupportTests.swift  AccessibilityMonitorTests.swift  AccessibilityRequestTests.swift  AppLaunchPresentationTests.swift  CompositionTests.swift  ConfigValidationTests.swift  DiagnosticLoggerTests.swift  EventHookTests.swift  HookKeyTests.swift  KeycodeTests.swift  MultilingualInputSourceTests.swift  SmokeTests.swift  StateMachineTests.swift  StatusItemTests.swift  WindowSizingTests.swift
bins/slipkey-windows/: Cargo.toml  build.rs
bins/slipkey-windows/embed/: .gitignore
bins/slipkey-windows/src/: app.rs  dll_provisioning.rs  hook_thread.rs  main.rs  single_instance.rs  startup.rs  tray.rs
bins/slipkey-windows/src/ui/: about.rs  general.rs  mod.rs  shortcuts.rs
bins/slipkey-windows/tests/: winpc_ui_design.rs
crates/imeswitch-core/: Cargo.toml
crates/imeswitch-core/src/: lib.rs  state_machine.rs  types.rs
crates/imeswitch-macos/: Cargo.toml
crates/imeswitch-macos/src/: accessibility.rs  composition.rs  config.rs  dispatch.rs  hook.rs  ime.rs  keymap.rs  lib.rs
crates/imeswitch-tsf-protocol/: Cargo.toml
crates/imeswitch-tsf-protocol/src/: lib.rs
crates/imeswitch-windows/: Cargo.toml
crates/imeswitch-windows/src/: composition.rs  config.rs  hook.rs  ime.rs  keymap.rs  lib.rs
crates/imeswitch-windows/src/ime/: detect 2.rs  detect.rs  layout.rs  mod 2.rs  mod.rs  mode.rs  tsf_dispatch.rs
crates/slipkey-tsf-helper/: Cargo.toml
crates/slipkey-tsf-helper/src/: compartment.rs  lib.rs  platform.rs
docs/: roadmap-multilingual-input-sources.md
docs/superpowers/plans/: 2026-04-27-slipkey-native-hook.md  2026-04-28-windows-gui.md  2026-05-11-single-file-distribution.md  2026-05-11-windows-ime-tsf-compartment.md
docs/superpowers/specs/: 2026-04-28-windows-gui-design.md  2026-05-11-windows-ime-tsf-compartment-design.md
scripts/: package-macos.sh
xtask/: Cargo.toml
xtask/src/: main.rs
