[workspace]
resolver = "2"
members = [
    "crates/imeswitch-core",
    "crates/imeswitch-tsf-protocol",
    "crates/imeswitch-windows",
    "crates/slipkey-tsf-helper",
    "bins/slipkey-windows",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
imeswitch-core = { path = "crates/imeswitch-core" }
imeswitch-tsf-protocol = { path = "crates/imeswitch-tsf-protocol" }
imeswitch-windows = { path = "crates/imeswitch-windows" }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "thin"
strip = true
