[workspace]
resolver = "2"
members = [
    "crates/imeswitch-core",
    "crates/imeswitch-tsf-protocol",
    "crates/imeswitch-windows",
    "crates/slipkey-tsf-helper",
    "bins/slipkey-windows",
    "xtask",
]

[workspace.package]
version = "0.1.6"
edition = "2021"
rust-version = "1.75"
description = "Typed input-method switching for macOS and Windows"
license = "MIT"
repository = "https://github.com/Oguri701/Slipkey"
homepage = "https://github.com/Oguri701/Slipkey"

[workspace.dependencies]
imeswitch-core = { path = "crates/imeswitch-core" }
imeswitch-tsf-protocol = { path = "crates/imeswitch-tsf-protocol" }
imeswitch-windows = { path = "crates/imeswitch-windows" }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "thin"
strip = true
