[package]
name = "imeswitch-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "imeswitch-app"
path = "src/main.rs"

[dependencies]
imeswitch-core.workspace = true
imeswitch-macos.workspace = true
anyhow.workspace = true
log.workspace = true
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
toml = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
