[package]
name = "slipkey-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[[bin]]
name = "Slipkey"
path = "src/main.rs"

[dependencies]
imeswitch-core.workspace = true
imeswitch-windows.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
tray-icon = "0.21"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
open = "5"
raw-window-handle = "0.6"
sha2 = "0.10"

[dev-dependencies]
hex = "0.4"
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
